fixing spacing issues
1. column align on top
2. spacing in banner
3. disclaimer margin adjustments

--- a/group/styles/styles.css
+++ b/group/styles/styles.css
@@ -296,6 +296,10 @@ main > .section:first-of-type .default-content-wrapper > h1 {
 
 @media (width >= 600px) {
   h1 { font-size: var(--heading-font-size-l); }
+
+  main > .section > .default-content-wrapper > p {
+    padding: 0 24px;
+  }
 }
 
 @media (width >= 900px) {
